message gap fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -912,6 +912,12 @@ button:not([disabled]):hover,
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  padding-inline: 1.25rem;
+}
+@media screen and (min-width: 36rem) {
+  .card-image {
+    padding-inline: 0rem;
+  }
 }
 .card-image img {
   width: 100%;
@@ -2854,17 +2860,7 @@ button:not([disabled]):hover,
 .empty-banner {
   position: relative;
   width: 100%;
-  height: 16.25rem;
-}
-@media screen and (min-width: 36rem) {
-  .empty-banner {
-    height: 20.625rem;
-  }
-}
-@media screen and (min-width: 48rem) {
-  .empty-banner {
-    height: 25rem;
-  }
+  height: 26.25rem;
 }
 @media screen and (min-width: 62rem) {
   .empty-banner {
@@ -3606,6 +3602,7 @@ button:not([disabled]):hover,
  EMPTY-BANNER-2-SECTION START
 */
 .empty-banner-2 .empty-info {
+  width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -3861,6 +3858,12 @@ button:not([disabled]):hover,
   gap: 0.5rem;
   flex-wrap: wrap;
   overflow: hidden;
+  padding-inline: 1.25rem;
+}
+@media screen and (min-width: 36rem) {
+  .ourguests .guestlist {
+    padding-inline: 0rem;
+  }
 }
 .ourguests .guestlist .card-flip {
   width: 100%;
@@ -3875,7 +3878,7 @@ button:not([disabled]):hover,
     width: calc(33.3333333333% - 0.5rem);
   }
 }
-@media screen and (max-width: 61.9375rem) {
+@media screen and (min-width: 62rem) {
   .ourguests .guestlist .card-flip {
     width: calc(25% - 0.5rem);
   }
